2001-01-24  Darin Adler  <darin@eazel.com>

	* AUTHORS:
	* THANKS:
	* src/nautilus-window-menus.c: (help_menu_about_nautilus_callback):
	Updated based on recent check-ins and other contributions.

	* check-THANKS.pl: Updated to check the about list against the
	AUTHORS file and to fix some other things.

	* libnautilus/nautilus-view-component.idl: Fix a comment and
	remove a stray empty line.

2001-01-24  Ramiro Estrugo  <ramiro@eazel.com>

	* applets/launcher/nautilus-launcher-applet.c: (create_pixbufs),
	(applet_change_pixel_size), (image_enter_event),
	(image_leave_event), (get_root_window),
	(window_set_cursor_for_state), (set_is_launching),
	(get_is_launching), (image_button_press_event),
	(image_button_release_event), (event_filter),
	(root_listen_for_property_changes), (main):
	Backout some dumb changes that i stupidly checked in.
	
2001-01-23  Michael Engber  <engber@eazel.com>

	reviewed by: George Lebl

	* components/image-viewer/nautilus-image-view.c:
	(control_destroy_callback), (control_factory_common):
	image-view was using freed (widget) memory.

2001-01-24  Andy Hertzfeld  <andy@eazel.com>

	removed files that I inadvertently checked in to the
	wrong branch.
	
	* components/rss-control/.cvsignore:
	* components/rss-control/Makefile.am:
	* components/rss-control/main.c:
	* components/rss-control/nautilus-rss-control.c:
	* components/rss-control/nautilus-rss-control.h:
	* components/rss-control/nautilus-rss-control.oafinfo:
	* data/top/Clock:
	* data/top/Slashdot:

2001-01-23  Andy Hertzfeld  <andy@eazel.com>

	* src/nautilus-theme-selector.c: (remove_button_callback),
	(exit_remove_mode):
	fixed recently introduced problem where it was still
	treating button labels as nautilus_labels instead of
	gtk_labels.
	
2001-01-23  Andy Hertzfeld  <andy@eazel.com>

	* src/nautilus-theme-selector.c:
	(nautilus_theme_selector_initialize), (remove_button_callback),
	(exit_remove_mode):
	fixed bug 5972, remove theme button uses aa text, by using