@@ -1,3 +1,9 @@
+2001-01-24  Andy Hertzfeld  <andy@eazel.com>
+
+	* src/nautilus-property-browser.c:
+	(nautilus_property_browser_initialize), (make_category_link):
+	removed some set_usize calls that I had only commented out before.
+	
 2001-01-24  Darin Adler  <darin@eazel.com>
 
 	* AUTHORS:
